메인 절충안

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".MainActivity">
         </activity>
         <activity android:name=".SvsmainActivity"></activity>
+        <activity android:name=".Londs"></activity>
         <activity android:name=".Statistics"></activity>
         <activity android:name=".Loading">
             <intent-filter>
